Fixed mobile nav collapse

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -60,6 +60,7 @@ p {
 	flex-direction: row;
 	justify-content: flex-end;
 	width: 100%;
+	background-color: #212226;
 }
 
 .navbar-brand {
