--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1,5 +1,8 @@
 #portfolio {
-	height: 1000px;
+	height: 100%;
+	padding-top: 100px;
+	padding-bottom: 100px;
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
+	align-items: center;
 }
